--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div class="col-sm">
                 <p> additional paragraph stuff about oregon</p>
-                <p>more thiings can be written in here to fill a column space.</p>
+                <p>more things can be written in here to fill a column space.</p>
                 <p>the column is a set width so the information will automatically wrap around.</p>
                 <p>nd finally this can be as long as needed because it wil wrap regardless and the display will fill in wite space in other columns</p>
             </div>
@@ -132,7 +132,8 @@
                 <div class="mb-3">
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Keep Up To Date On Our Movie Deals.">
+                  Sign Up</button>
             </form>
         </div>
 
@@ -157,6 +158,14 @@
         </div>
     </div>
    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script>
+      $('.popover-dismiss').popover({
+        trigger: 'focus'
+      })
+    </script>
   </body>
 </html>
