--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 <div class="mb-3">
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
+                <!--This buttn uses jQuery to set a popover on clicking the submit button. Changes can be made to position within this snippet-->
                 <button type="button" class="btn btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Keep Up To Date On Our Movie Deals.">
                   Sign Up</button>
             </form>
@@ -157,11 +158,11 @@
             </ul>
         </div>
     </div>
-   
+    <!--Using the jQuery popper/bootstrap. must have in this order to use properly-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+    <!--below is the jQuery code to use the popover effect-->
     <script>
       $('.popover-dismiss').popover({
         trigger: 'focus'
